<resources>
    <string name="app_name">NoteManagement</string>
    <string name="title_activity_note_management">NoteManagementActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Note Management System</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Dashboard Form</string>
    <string name="menu_category">Category Form</string>
    <string name="menu_priority">Priority Form</string>
    <string name="menu_status">Status Form</string>
    <string name="menu_note">Note Form</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_change_password">Change Password</string>

<<<<<<< HEAD
=======
    <array name="listCategory">
        <item>Select category</item>
    </array>

    <array name="listPriority">
        <item>Select priority</item>
    </array>

    <array name="listStatus">
        <item>Select status</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

>>>>>>> d6447612beac8c4242f0aa2c0e5d19574036bbbe
</resources>